--- a/myapp/package.json
+++ b/myapp/package.json
@@ -14,6 +14,7 @@
     "react-query": "^3.39.2",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "url-search-params-polyfill": "^8.1.1",
     "web-vitals": "^2.1.4"
   },
   "proxy": "http://localhost:4000",
